# cosmic-ray-2

./: .commit_msg.txt  .gitignore  README.md  cosmic-ray.toml  pyproject.toml  requirements.txt
.github/workflows/: mutation-testing.yml
cosmic-ray/0/: cosmic_ray.json  cosmic_ray_dump.jsonl
docs/: Testable_Strategy_Metrics_Mapping_v0.2.xlsx  metrics-mapping.md
reports/: metrics-report.json  metrics-report.md  mutation-score-gate.json
scripts/: export_testable_cosmic_ray.py  metrics_reporter.py  run_mutation_testing.ps1  run_mutation_testing.sh
src/testable_demo/: __init__.py  calculator.py  discount.py  order_validator.py
tests/: test_calculator.py  test_discount.py  test_order_validator.py
