[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testable-cosmic-ray-demo"
version = "0.1.0"
description = "Cosmic Ray mutation testing metrics verification repo, aligned with TESTABLE Strategy & Metrics Mapping v0.2 (White Box > Mutation Testing, Python primary tool: cosmic-ray)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "cosmic-ray>=8.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["testable_demo"]
branch = true
